Fix Bug 1124042 - Move Thunderbird Features page to Bedrock

--- a/bedrock/thunderbird/templates/thunderbird/includes/simple-footer.html
+++ b/bedrock/thunderbird/templates/thunderbird/includes/simple-footer.html
@@ -5,7 +5,7 @@
 <footer id="colophon">
   <div class="row">
     <ul class="primary">
-      <li><a href="/thunderbird/features/"><span>{{_('Features')}}</span></a></li>
+      <li><a href="{{ url('thunderbird.features') }}"><span>{{_('Features')}}</span></a></li>
       <li><a href="https://addons.mozilla.org/thunderbird/"><span>{{_('Add-ons')}}</span></a></li>
       <li><a href="https://support.mozilla.org/products/thunderbird"><span>{{_('Support')}}</span></a></li>
       <li><a href="{{ url('mozorg.about') }}"><span>{{_('About')}}</span></a></li>
