--- a/bedrock/thunderbird/templates/thunderbird/index.html
+++ b/bedrock/thunderbird/templates/thunderbird/index.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div id="thunderbird-screenshot">
-    {{ platform_img('img/thunderbird/landing/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'platforms': ('windows', 'linux', 'mac')}) }}
+    {{ platform_img('thunderbird/landing/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
   </div>
 </main>
 
