--- a/bedrock/firefox/templates/firefox/includes/download-button.html
+++ b/bedrock/firefox/templates/firefox/includes/download-button.html
@@ -22,7 +22,7 @@
 {% set download_class = download_class ~ ' download-button-simple' if simple else download_class %}
 {% set download_class = download_class ~ ' download-button-check-old-fx' if check_old_fx else download_class %}
 
-<div id="{{ id }}" class="{{ download_class }}">
+<div class="{{ download_class }}">
   {% if show_desktop %}
     <noscript>
       {{ alt_buttons(builds) }}
