Bug 1166055 - Refactor RTL handling in CSS, part 1

--- a/media/css/base/mozilla-modal.less
+++ b/media/css/base/mozilla-modal.less
@@ -125,7 +125,7 @@ html[dir="rtl"] {
 @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
     #modal .inner {
         .span_narrow(12);
-        float: none;
+        .float-none;
         margin: @baseLine auto (@baseLine * 3);
     }
 }
