--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -34,7 +34,7 @@
     margin-right: @gridGutterWidth * 1.5;
     input[type=search] {
         .span(3);
-        float: none;
+        .float-none;
         margin-left: 0;
         vertical-align: middle;
         line-height: 1.3;
@@ -210,7 +210,7 @@
     #language-search {
         input[type=search] {
             .span_narrow(3);
-            float: none;
+            .float-none;
         }
         button {
             vertical-align: middle;
@@ -279,7 +279,7 @@
         margin-right: @gridGutterWidth;
         input[type=search] {
             .span(3);
-            float: none;
+            .float-none;
             margin-left: 0;
             vertical-align: middle;
         }
