--- a/media/css/firefox/dev-firstrun.less
+++ b/media/css/firefox/dev-firstrun.less
@@ -58,7 +58,7 @@
         }
 
         &.feature-centered {
-            float: none;
+            .float-none;
             width: 450px;
             margin: 0 auto;
         }
@@ -110,7 +110,7 @@
     list-style-type: none;
 
     &:nth-child(3n+1){
-        clear: left;
+        .clear-left;
     }
 
     h2 {
@@ -221,7 +221,7 @@
         margin-bottom: @baseLine * 2;
 
         &.feature-centered {
-            float: none;
+            .float-none;
             margin: 0 auto;
             width: 450px;
         }
