--- a/media/css/firefox/firstrun.less
+++ b/media/css/firefox/firstrun.less
@@ -178,7 +178,7 @@
         div {
             .span_narrow(6);
             width: auto;
-            float: none;
+            .float-none;
             h2 {
                 .font-size(30px);
             }
