--- a/media/css/firefox/independent.less
+++ b/media/css/firefox/independent.less
@@ -343,7 +343,7 @@ html[lang^="en"] {
         h2,
         .download {
             width: auto;
-            float: none;
+            .float-none;
             margin: 0 0 @baseLine;
         }
     }
@@ -355,7 +355,7 @@ html[lang^="en"] {
     .accolade {
         width: @widthMobile - (@gridGutterWidth * 2);
         margin: 0 auto @baseLine;
-        float: none;
+        .float-none;
     }
 
     .trusted {
