--- a/media/css/firefox/installer-help.less
+++ b/media/css/firefox/installer-help.less
@@ -27,7 +27,7 @@
 
   .channels {
     .span(5);
-    float: right;
+    .float-right;
     .download-box {
       float: right;
       clear: both;
@@ -71,7 +71,7 @@ aside.survey,
 
     .channels {
       .span_narrow(5);
-      float: right;
+      .float-right;
     }
 
   }
@@ -85,11 +85,11 @@ aside.survey,
     padding: 20px 25px;
     .main {
       width: auto;
-      float: none;
+      .float-none;
     }
     .channels {
       width: auto;
-      float: none;
+      .float-none;
       .download-box {
         float: left;
       }
@@ -99,7 +99,7 @@ aside.survey,
     }
     .help {
       width: auto;
-      float: none;
+      .float-none;
     }
   }
 
