--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -248,8 +248,8 @@ img {
 
     ul.links {
       .span_narrow(4);
-      float: right;
-      clear: right;
+      .float-right;
+      .clear-right;
     }
 
   }
