--- a/media/css/gigabit/gigabit.less
+++ b/media/css/gigabit/gigabit.less
@@ -295,7 +295,7 @@
   #home-banner .main,
   #home-banner .aside,
   #get-involved .category {
-    float: none;
+    .float-none;
     margin: 0;
     width: auto;
   }
