--- a/media/css/legal/fraud-report.less
+++ b/media/css/legal/fraud-report.less
@@ -27,7 +27,7 @@
 
 .sidebar {
     width: 250px;
-    margin-left: 100px;
+    .margin-left(100px);
 }
 
 .container {
@@ -48,14 +48,14 @@
 
 @media only screen and (max-width: @breakDesktop) {
     .main-column {
-        float: none;
+        .float-none;
         width: auto;
     }
 
     .sidebar {
-        float: none;
+        .float-none;
         width: 280px;
-        margin: (@baseLine * 2) 0 0;
+        .margin(@baseLine * 2, 0, 0, 0);
     }
 }
 
