--- a/media/css/lightbeam/lightbeam.less
+++ b/media/css/lightbeam/lightbeam.less
@@ -29,7 +29,7 @@ h1.large {
 
     img {
         .span(6);
-        float: right;
+        .float-right;
         margin-bottom: @baseLine;
     }
 
@@ -216,7 +216,7 @@ h1.large {
         }
 
         img {
-            float: none;
+            .float-none;
             width: 40%;
             margin: 0 auto @baseLine auto;
         }
@@ -276,7 +276,7 @@ h1.large {
         .span8 {
             width: auto;
             margin: 0;
-            float: none;
+            .float-none;
         }
 
         #primary .button {
@@ -317,13 +317,13 @@ h1.large {
         }
 
         section {
-            float: none;
+            .float-none;
             width: auto;
             margin: 0;
         }
 
         img {
-            float: none;
+            .float-none;
             width: 70%;
             margin: 0 auto @baseLine auto;
         }
