--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -56,8 +56,8 @@
 
     .help {
         .span(6);
-        float: right;
-        text-align: right;
+        .float-right;
+        .text-align-right;
         margin: .75em 0;
     }
 }
@@ -350,7 +350,7 @@
 // Single entry (either a space or a community)
 .entry {
     .span(9);
-    float: right;
+    .float-right;
     margin-bottom: 30px;
 
     .card {
@@ -630,7 +630,7 @@
 
         .help {
             .span_narrow(5);
-            float: right;
+            .float-right;
 
             a {
                 display: block;
@@ -644,7 +644,7 @@
 
     .entry {
         .span_narrow(8);
-        float: right;
+        .float-right;
 
         .card {
             min-height: 0;
@@ -719,7 +719,7 @@
         .page-title {
             background: transparent;
             color: @textColorPrimary;
-            float: none;
+            .float-none;
             margin: 0 0 .25em;
             padding: 0;
             width: auto;
@@ -731,10 +731,10 @@
         }
 
         .help {
-            float: none;
+            .float-none;
             margin: 0 0 1em;
             width: auto;
-            text-align: left;
+            .text-align-left;
         }
     }
 
