--- a/media/css/mozorg/contentservices.less
+++ b/media/css/mozorg/contentservices.less
@@ -43,8 +43,7 @@
 
     .main {
         .span(6);
-        float: left;
-        clear: left;
+        .clear-left;
         margin-bottom: @baseLine;
 
         .lede {
@@ -72,7 +71,7 @@
 
 .video {
     .span(6);
-    float: right;
+    .float-right;
     margin-top: -50px;
     margin-bottom: @baseLine;
     .caption {
@@ -199,7 +198,7 @@ ul.links {
         .video,
         ul.links li {
             width: auto;
-            float: none;
+            .float-none;
         }
     }
 }
