--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -727,7 +727,7 @@ textarea:focus {
 
     .other-actions {
         .span(8);
-        float: none;
+        .float-none;
         margin: 0 auto;
 
         li {
@@ -1937,7 +1937,7 @@ textarea:focus {
     }
 
     .contribute-nav {
-        float: right;
+        .float-right;
 
         li {
             float: right;
@@ -2169,7 +2169,7 @@ textarea:focus {
 
         .other-actions {
             .span_narrow(8);
-            float: none;
+            .float-none;
             margin: 0 auto;
         }
     }
@@ -2287,7 +2287,7 @@ textarea:focus {
 
     .contribute-nav {
         width: auto;
-        float: none;
+        .float-none;
         position: absolute;
         left: -10px;
         top: 0;
