--- a/media/css/mozorg/contribute/contribute-old.less
+++ b/media/css/mozorg/contribute/contribute-old.less
@@ -282,10 +282,6 @@ html[dir='rtl'] {
             margin-right: 0;
             margin-left: 10px;
         }
-
-        h3 {
-            float: right;
-        }
     }
 }
 
@@ -376,7 +372,7 @@ html[dir='rtl'] {
     .main,
     .aside {
         width: auto;
-        float: none;
+        .float-none;
         margin: 0;
     }
 
@@ -404,13 +400,13 @@ html[dir='rtl'] {
 
         h3 {
             width: auto;
-            float: none;
+            .float-none;
             margin: 0 0 .25em;
         }
 
         p {
             width: auto;
-            float: none;
+            .float-none;
             margin: 0 0 1em;
         }
     }
