--- a/media/css/mozorg/contribute/studentambassadors/join.less
+++ b/media/css/mozorg/contribute/studentambassadors/join.less
@@ -137,12 +137,12 @@ span.required {
   #ambassadors-form {
     .form-column {
       width: auto;
-      float: none;
+      .float-none;
       margin: 0 (@gridGutterWidth / 2);
     }
 
     .form-submit {
-      float: left;
+      .float-left;
     }
   }
 }
@@ -152,12 +152,12 @@ span.required {
   #ambassadors-form {
     .form-column {
       width: auto;
-      float: none;
+      .float-none;
       margin: 0 (@gridGutterWidth / 2);
     }
 
     .form-submit {
-      float: left;
+      .float-left;
     }
   }
 }
