--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -2301,7 +2301,7 @@
 
     .links li {
         width: auto;
-        float: none;
+        .float-none;
         margin: 0 10px 1em;
         min-height: 0;
 
