--- a/media/css/mozorg/powered-by.less
+++ b/media/css/mozorg/powered-by.less
@@ -28,8 +28,7 @@
 
   .main {
     .span(6);
-    float: left;
-    clear: left;
+    .clear-left;
     margin-bottom: @baseLine;
   }
 
@@ -43,7 +42,7 @@
 
   .aside {
     .span(5);
-    float: right;
+    .float-right;
   }
 
   #powered-by {
@@ -110,13 +109,13 @@ ul.links {
 
     .main {
       width: auto;
-      float: none;
+      .float-none;
     }
 
     .aside {
       width: auto;
       margin: 0 10px;
-      float: none;
+      .float-none;
     }
 
     ul.links li {
