--- a/media/css/mozorg/projects/mozilla-based.less
+++ b/media/css/mozorg/projects/mozilla-based.less
@@ -85,7 +85,7 @@
     }
     p {
         .span(5);
-        margin-right: 0;
+        .margin-right(0);
     }
     p.more {
         margin-left: 0;
@@ -110,8 +110,8 @@
     h3,
     p {
         width: auto;
-        float: none;
-        clear: left;
+        .float-none;
+        .clear-left;
     }
     p {
         margin-left: 0;
@@ -129,7 +129,7 @@
 
 #featured {
     li {
-        float: none;
+        .float-none;
         width: auto;
         h3 span {
             display: block;
@@ -157,8 +157,8 @@
     h3,
     p {
         width: auto;
-        float: none;
-        clear: left;
+        .float-none;
+        .clear-left;
     }
     p {
         margin-left: 0;
@@ -167,9 +167,9 @@
 
 .sidebar {
     width: auto;
-    float: none;
-    margin-left:  (@gridGutterWidth / 2);
-    margin-right: (@gridGutterWidth / 2);
+    .float-none;
+    .margin-left(@gridGutterWidth / 2);
+    .margin-right(@gridGutterWidth / 2);
 }
 
 }
