--- a/media/css/newsletter/newsletter.less
+++ b/media/css/newsletter/newsletter.less
@@ -72,7 +72,7 @@
     #remove-all-section,
     .submit-field {
         .span(7);
-        float: right;
+        .float-right;
     }
     #other-newsletters {
         margin-top: @baseLine;
@@ -148,7 +148,7 @@
         .table {
             .span(6);
             margin: auto;
-            float: none;
+            .float-none;
             textarea {
                 .border-box();
                 width: 100%;
@@ -229,7 +229,7 @@
         .form-contents,
         .form-submit {
             .span(6);
-            clear: left;
+            .clear-left;
         }
     }
 }
@@ -245,7 +245,7 @@
         #remove-all-section,
         .submit-field {
             .span_narrow(9);
-            float: none;
+            .float-none;
             margin: 0 auto @baseLine;
         }
     }
@@ -255,7 +255,7 @@
             .table {
                 .span_narrow(8);
                 margin: auto;
-                float: none;
+                .float-none;
             }
             .sub-feature {
                 .span_narrow(4);
@@ -278,7 +278,7 @@
             .form-contents,
             .form-submit {
                 .span_narrow(6);
-                clear: left;
+                .clear-left;
             }
         }
     }
