--- a/media/css/research/research.less
+++ b/media/css/research/research.less
@@ -53,6 +53,7 @@
 
         ul.links {
             .span_narrow(6);
+            .offset(0);
         }
     }
 }
@@ -72,8 +73,9 @@
         .intro,
         ul.links {
             .span_narrow(5);
+            .offset(0);
             width: auto;
-            float: none;
+            .float-none;
         }
         .intro {
             .font-size(@baseFontSize);
