--- a/media/css/sandstone/oldIE.less
+++ b/media/css/sandstone/oldIE.less
@@ -541,14 +541,17 @@ img {
 
     h3 {
         .span(4);
+        float: left;
     }
 
     .form-contents {
         .span(5);
+        float: left;
     }
 
     .form-submit {
         .span(3);
+        float: left;
 
         input {
             overflow: visible;
@@ -635,14 +638,17 @@ img {
 
     .footer-logo {
         .span(3);
+        float: left;
     }
 
     .footer-license {
         .span(3);
+        float: left;
     }
 
     .footer-nav {
         .span(2);
+        float: left;
     }
 
     a:link,
