--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -717,7 +717,7 @@ noscript {
             li {
                 width: auto;
                 margin-bottom: 10px;
-                float: none;
+                .float-none;
                 font-style: normal;
                 text-align: left;
                 padding: 0;
