--- a/media/css/legal/legal.less
+++ b/media/css/legal/legal.less
@@ -61,7 +61,6 @@
 
 
 .main-column {
-    float: left;
     margin: 0;
     padding: 0;
     width: (@gridColumnWidth * 9) + (@gridGutterWidth * 9);
@@ -218,8 +217,8 @@
 }
 
 .sidebar {
-    float: left;
-    margin: 0;
+    .margin-right(0);
+    .margin-left(0);
     padding: 0;
     width: (@gridColumnWidth * 3) + (@gridGutterWidth * 5);
 
@@ -254,11 +253,6 @@
 }
 
 html[dir="rtl"] {
-    .main-column,
-    .sidebar {
-        float: right;
-    }
-
     article li {
         margin-right: 20px;
         margin-left: 0;
