--- a/media/css/mozorg/powered-by.less
+++ b/media/css/mozorg/powered-by.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #wrapper {
   width: 100%;
 }
