Fix Bug 1191136 - Download page says my Firefox is out of date when Firefox is not available for Firefox OS TV

--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -134,6 +134,8 @@
           <div class="fxos-latest-links-wrapper latest-links-wrapper">
             <ul>
               <li><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
+              <li><a href="https://support.mozilla.org/products/firefox-os">{{_('Need help?')}}</a></li>
+              <li><a href="https://support.mozilla.org/kb/update-new-version-firefox-os">{{_('Update to stay fast and safe.')}}</a></li>
               <li><a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Discover all the ways to take Firefox on the go')}}</a></li>
             </ul>
           </div>
