--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -293,17 +293,29 @@ html.fxos {
         display: none;
     }
 
+    #theater-firefox,
+    #stage-firefox {
+        height: auto;
+    }
+
+    #scene1 {
+        position: relative;
+        height: auto;
+    }
+
     .fxos-latest-links-wrapper {
         display: block;
         padding-top: 26px;
     }
 
+    .download-button-wrapper,
+    .desktop-latest-links-wrapper,
     #firefox-screenshot {
         display: none;
     }
 
-    .desktop-latest-links-wrapper {
-        display: none;
+    #newsletter-latest {
+        display: block;
     }
 }
 
