--- a/bedrock/firefox/templates/firefox/new2.html
+++ b/bedrock/firefox/templates/firefox/new2.html
@@ -6,6 +6,8 @@
 
 {% extends "firefox/base-resp.html" %}
 
+{% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
+
 {% block page_title_prefix %}{{_('Download Firefox')}} — {% endblock %}
 {% block page_title %}{{_('Free Web Browser')}}{% endblock %}
 {% block page_desc %}{{_('Download Mozilla Firefox, a free Web browser. Firefox is created by a global non-profit dedicated to putting individuals in control online. Get Firefox today!')}}{% endblock %}
