Fix Bug 1198773, Add Mark Mayo to steering committee page, and update titles on leadership page

--- a/bedrock/foundation/templates/foundation/mocosc.html
+++ b/bedrock/foundation/templates/foundation/mocosc.html
@@ -46,5 +46,6 @@
     <li><a href="https://blog.mozilla.org/press/bios/jim-cook/">Jim Cook, {{ _('Chief Finance Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/denelle-dixon-thayer/">Denelle Dixon-Thayer, {{ _('Senior Vice President Business and Legal Affairs') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/david-slater/">David Slater, {{ _('Chief of Staff and SVP of Operations') }}</a></li>
+    <li><a href="https://blog.mozilla.org/press/bios/mark-mayo/">Mark Mayo, {{_('Senior Vice President, Firefox')}}</a></li>
   </ul>
 {% endblock %}
