--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -92,7 +92,7 @@
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/denelle-dixon-thayer.jpg') }}">
           <span class="fn" itemprop="name">Denelle Dixon-Thayer</span>
         </a>
-        <span class="title" itemprop="jobTitle">{{ _('SVP, Business and Legal Affairs') }}</span>
+        <span class="title" itemprop="jobTitle">{{ _('Chief Legal and Business Officer') }}</span>
         <span class="note">{{ _('Steering Committee') }}</span>
 
         <ul class="elsewhere">
@@ -159,7 +159,7 @@
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mark-mayo.jpg') }}">
           <span class="fn" itemprop="name">Mark Mayo</span>
         </a>
-        <span class="title" itemprop="jobTitle">{{ _('VP and General Manager, Firefox') }}</span>
+        <span class="title" itemprop="jobTitle">{{ _('Senior Vice President, Firefox') }}</span>
 
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/mmayo">@mmayo</a></li>
@@ -184,7 +184,7 @@
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/nick-nguyen.jpg') }}">
           <span class="fn" itemprop="name">Nick Nguyen</span>
         </a>
-        <span class="title" itemprop="jobTitle">{{ _('VP, Product Strategy') }}</span>
+        <span class="title" itemprop="jobTitle">{{ _('VP of Product, Firefox') }}</span>
 
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/osunick">@osunick</a></li>
