[fix bug 1169038] Firefox Push FAQ page

--- a/media/css/firefox/dashboard.less
+++ b/media/css/firefox/dashboard.less
@@ -40,6 +40,18 @@
     }
 }
 
+.html-rtl {
+    #main-feature h1 {
+        float: right;
+    }
+    .main-column {
+        float: right;
+    }
+    .sidebar {
+        float: right;
+    }
+}
+
 
 /* {{{ Responsive Grid */
 
@@ -74,5 +86,4 @@
             margin-bottom: @baseLine / 2;
         }
     }
-
 }
