--- a/media/css/firefox/tiles.less
+++ b/media/css/firefox/tiles.less
@@ -140,6 +140,15 @@
         }
     }
 
+    .html-rtl {
+        .main-column {
+            margin-right: 0;
+        }
+        .sidebar {
+            margin-right: 0;
+        }
+    }
+
     .sidebar {
         width: 100%;
         margin-top: 0;
