--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -101,6 +101,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/mark-mayo/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mark-mayo.jpg') }}">
+          <span class="fn" itemprop="name">Mark Mayo</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Senior Vice President, Firefox') }}</span>
+        <span class="note">{{ _('Steering Committee') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/mmayo">@mmayo</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/mmayo/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/david-slater/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/david-slater.jpg') }}">
           <span class="fn" itemprop="name">David Slater</span>
@@ -151,19 +165,6 @@
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/kaykas">@kaykas</a></li>
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/kaykas/">{{ _('Mozillians profile') }}</a></li>
-        </ul>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/mark-mayo/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mark-mayo.jpg') }}">
-          <span class="fn" itemprop="name">Mark Mayo</span>
-        </a>
-        <span class="title" itemprop="jobTitle">{{ _('Senior Vice President, Firefox') }}</span>
-
-        <ul class="elsewhere">
-          <li><a class="url twitter" itemprop="url" href="https://twitter.com/mmayo">@mmayo</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/mmayo/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
