--- a/media/css/firefox/personal.less
+++ b/media/css/firefox/personal.less
@@ -157,8 +157,10 @@ body {
             }
         }
 
-        .download-dumb h4 {
-            color: #fff;
+        .download-dumb {
+            .download-heading {
+                color: #fff;
+            }
         }
     }
     .download-content {
