--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -599,7 +599,7 @@ html[lang|="en"] {
         }
 
         .download-dumb {
-            h4 {
+            .download-heading {
                 text-align: center;
             }
             ul {
