--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -679,10 +679,14 @@ html[lang^='en'] {
 
 .download-button .download-dumb {
     text-align: left;
-    h4 {
-        text-shadow: none;
+    .download-heading {
+        color: #fff;
         margin: 0 0 6px 0;
+        .open-sans-light();
         .font-size(18px);
+        font-weight: 300;
+        letter-spacing: -0.035em;
+        text-shadow: none;
     }
     ul li {
         display: inline;
