--- a/media/css/thunderbird/features.less
+++ b/media/css/thunderbird/features.less
@@ -8,6 +8,12 @@
     line-height: 1.3;
 }
 
+#email-providers {
+    main > section {
+        margin-top: 0;
+    }
+}
+
 [role="directory"] ul {
     display: block;
     overflow: hidden;
